--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -30,21 +30,17 @@
             </div>
             <div class="banner_two_slider_item fadeInUp" data-wow-duration="2s"
                 style="background-image: url(/static/assets/img/banner/banner2.jpg);">
-                
-            </div>
-            <div class="banner_two_slider_item fadeInUp" data-wow-duration="2s"
-                style="background-image: url(/static/assets/img/banner/banner-two-bg-3.png);">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="banner_two_text">
-                                <h3 class="title">DESTINATION MANAGEMENT COMPANY </h3>
-                                <h1 class="slider-sttle">EXPLORE</h1>
-                                <h2 class="slider-pararp">The world with us!</h2>
-                                <h4 class="slider-pararp">Find awesome hotels, tours, car retanl and Holiday packages</h4>
+                                <h3 class="title">WORLD BEST MUSICAL OBSERVATORY </h3>
+                                <h1 class="slider-sttle">IN CLASSICA</h1>
+                                <h2 class="slider-pararp">12 FEBRUARY</h2>
+                                <h4 class="slider-pararp">10 MARCH 2023</h4>
                                 <div class="home_two_button btn-animation">
-                                    <a href="{% url 'all-tours-grid' %}" class="btn btn_theme_white btn_md">Discover</a>
-                                    <a href="{% url 'outbounds' %}" class="btn btn_theme_transparent btn_md">Know
+                                    <a href="" class="btn btn_theme_white btn_md">Discover</a>
+                                    <a href="" class="btn btn_theme_transparent btn_md">Know
                                         more</a>
                                 </div>
                             </div>
@@ -52,6 +48,7 @@
                     </div>
                 </div>
             </div>
+            
         </div>
     </section>
 
