--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -9,7 +9,7 @@
     <section id="home_two_banner">
         <div class="home_two_banner_slider_wrapper owl-carousel owl-theme">
             <div class="banner_two_slider_item fadeInUp" data-wow-duration="3s"
-                style="background-image: url(/static/assets/img/banner/banner2.jpg);">
+                style="background-image: url(/static/assets/img/banner/banner2.jpg); background-size: contain;" >
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6">
@@ -159,7 +159,7 @@
                             </div>
                             <div class="holiday_small_boxed">
                                 <a href="top-destinations-details.html">
-                                    <img src="/static/assets/img/holiday-img/holiday-3.png" alt="img">
+                                    <img src="/static/assets/img/holiday-img/georgia.jpg" alt="img">
                                     <div class="holiday_small_box_content">
                                         <div class="holiday_inner_content">
                                             <div class="rating_outof">
@@ -170,10 +170,9 @@
                                                 <i class="fas fa-star"></i>
                                                 <h5>5 Out of 5</h5>
                                             </div>
-                                            <h3>China | $6000</h3>
-                                            <h4>8 days 7 nights</h4>
-                                            <p>Cupidatat consectetur ea cillum nt
-                                                consectetur excepteur.</p>
+                                            <h3>Georgia | 2250 AED</h3>
+                                            <h4>4 days 3 nights</h4>
+                                            <p></p>
                                         </div>
                                     </div>
                                 </a>
@@ -182,7 +181,7 @@
                         <div class="col-lg-6">
                             <div class="holiday_small_boxed">
                                 <a href="top-destinations-details.html">
-                                    <img src="/static/assets/img/holiday-img/holiday-3.png" alt="img">
+                                    <img src="/static/assets/img/holiday-img/baku.jpg" alt="img">
                                     <div class="holiday_small_box_content">
                                         <div class="holiday_inner_content">
                                             <div class="rating_outof">
@@ -193,10 +192,9 @@
                                                 <i class="fas fa-star"></i>
                                                 <h5>5 Out of 5</h5>
                                             </div>
-                                            <h3>China | $6000</h3>
-                                            <h4>8 days 7 nights</h4>
-                                            <p>Cupidatat consectetur ea cillum nt
-                                                consectetur excepteur.</p>
+                                            <h3>Baku | $6000</h3>
+                                            <h4>4 days 3 nights</h4>
+                                            <p></p>
                                         </div>
                                     </div>
                                 </a>
@@ -209,7 +207,7 @@
                         <div class="col-lg-12">
                             <div class="holiday_small_boxed">
                                 <a href="top-destinations-details.html">
-                                    <img src="/static/assets/img/holiday-img/holiday-4.png" alt="img">
+                                    <img src="/static/assets/img/holiday-img/kualalumpur.jpg" alt="img">
                                     <div class="holiday_small_box_content">
                                         <div class="holiday_inner_content">
                                             <div class="rating_outof">
@@ -220,10 +218,9 @@
                                                 <i class="fas fa-star"></i>
                                                 <h5>5 Out of 5</h5>
                                             </div>
-                                            <h3>China | $6000</h3>
-                                            <h4>8 days 7 nights</h4>
-                                            <p>Cupidatat consectetur ea cillum nt
-                                                consectetur excepteur.</p>
+                                            <h3>Kuala Lumpur | 899 AED</h3>
+                                            <h4>4 days 3 nights</h4>
+                                            <p></p>
                                         </div>
                                     </div>
                                 </a>
@@ -234,7 +231,7 @@
                                 <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                                     <div class="holiday_small_boxed">
                                         <a href="top-destinations-details.html">
-                                            <img src="/static/assets/img/holiday-img/holiday-5.png" alt="img">
+                                            <img src="/static/assets/img/holiday-img/jordon.jpg" alt="img">
                                             <div class="holiday_small_box_content">
                                                 <div class="holiday_inner_content">
                                                     <div class="rating_outof">
@@ -245,10 +242,9 @@
                                                         <i class="fas fa-star"></i>
                                                         <h5>5 Out of 5</h5>
                                                     </div>
-                                                    <h3>China | $6000</h3>
-                                                    <h4>8 days 7 nights</h4>
-                                                    <p>Cupidatat consectetur ea cillum nt
-                                                        consectetur excepteur.</p>
+                                                    <h3>Jordon | 2690 AED</h3>
+                                                    <h4>6 days 5 nights</h4>
+                                                    <p></p>
                                                 </div>
                                             </div>
                                         </a>
@@ -257,7 +253,7 @@
                                 <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                                     <div class="holiday_small_boxed">
                                         <a href="top-destinations-details.html">
-                                            <img src="/static/assets/img/holiday-img/holiday-6.png" alt="img">
+                                            <img src="/static/assets/img/holiday-img/kyrgyzstan.jpg" alt="img">
                                             <div class="holiday_small_box_content">
                                                 <div class="holiday_inner_content">
                                                     <div class="rating_outof">
@@ -268,10 +264,9 @@
                                                         <i class="fas fa-star"></i>
                                                         <h5>5 Out of 5</h5>
                                                     </div>
-                                                    <h3>China | $6000</h3>
-                                                    <h4>8 days 7 nights</h4>
-                                                    <p>Cupidatat consectetur ea cillum nt
-                                                        consectetur excepteur.</p>
+                                                    <h3>Kyrgyzstan | 980 AED</h3>
+                                                    <h4>4 days 3 nights</h4>
+                                                    <p></p>
                                                 </div>
                                             </div>
                                         </a>
