--- a/frontend/templates/frontend/contact.html
+++ b/frontend/templates/frontend/contact.html
@@ -85,41 +85,33 @@
                             <h2>Leave us a message</h2>
                         </div>
                         <div class="contact_form">
-                            <form action="!#" id="contact_form_content">
+                            <form method="POST" id="contact_form_content">
+                                {% csrf_token %}
                                 <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control bg_input" placeholder="First name*">
-                                        </div>
+                                    <div class="col-lg-12">
+                                        {{form.name}}
                                     </div>
                                     <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control bg_input" placeholder="Last name*">
-                                        </div>
+                                        {{form.email}}
                                     </div>
                                     <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control bg_input"
-                                                placeholder="Email address (Optional)">
-                                        </div>
+                                        {{form.phone}}
                                     </div>
-                                    <div class="col-lg-6">
+                                    
+                                    <div class="col-lg-12">
                                         <div class="form-group">
-                                            <input type="text" class="form-control bg_input"
-                                                placeholder="Mobile number*">
+                                            {{ form.message }}
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <textarea class="form-control bg_input" rows="5"
-                                                placeholder="Message"></textarea>
+                                            <button type="submit" class="btn btn_theme btn_md">Send message</button>
                                         </div>
                                     </div>
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <button type="button" class="btn btn_theme btn_md">Send message</button>
-                                        </div>
-                                    </div>
+                                    
+                                    {% include 'frontend/alert.html' %}
+						  </div>
+						  {% endfor %}
                                 </div>
                             </form>
                         </div>
