--- a/tour/templates/tour/tourdetails.html
+++ b/tour/templates/tour/tourdetails.html
@@ -579,10 +579,10 @@
                         <div class="heart_destinations">
                             <i class="fas fa-heart"></i>
                         </div>
-                        <a href="{% url 'outbound-detail' city.slug %}"><img src="{{tour.thumbnail.url}}"
+                        <a href="{% url 'tour-detail' tour.slug %}"><img src="{{tour.thumbnail.url}}"
                                 alt="img"></a>
                                 <div class="top_destinations_box_content">
-                                    <h4 ><a href="{% url 'outbound-detail' tour.slug %}">{{ city.name }} </a></h4>
+                                    <h4 ><a href="{% url 'tour-detail' tour.slug %}">{{ tour.name }} </a></h4>
                                     <p><span class="review_rating">{{ tour.duration }}H</span> <span
                                             class="review_count"></span></p>
                                             {% for price in tour.price.all %}
