--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -1,5 +1,5 @@
  <!-- Header Area -->
- 
+ {% include 'frontend/alert.html' %}
  <header class="main_header_arae">
     <!-- Top Bar -->
     <div class="topbar-area">
