--- a/frontend/templates/frontend/alert.html
+++ b/frontend/templates/frontend/alert.html
@@ -1,13 +1,15 @@
 {% if messages %}
 
     {% for message in messages %}
-    <div id="message" class="container">
-    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %} role="alert">
-      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error: {% endif %}
-        {{ message }}
+    
+    
+    <div  {% if message.tags %} class="alert alert-{{ message.tags }} alert-dismissible fade show shadow-sm" {% endif %}  role="alert">
+      <strong></strong> {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    </div>
+
+
+    
     {% endfor %}
 
 {% endif %}
