--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -366,7 +366,7 @@
                             <p class="text-light">Pick and Drop , DUne Bashing (Lahbab), Sand Boarding, Camel Rides, Sheesha, Live BBQ, Buffet, Live Shows...
                             </p>
                             <div class="partner_video_area">
-                                <a class="video_btn video_play_area" href="https://www.youtube.com/watch?v=7W9SKUJlzik"
+                                <a class="video_btn video_play_area" href="https://youtu.be/4qQiWQ9szFY"
                                     title="Youtube Video"><i class="fas fa-play"></i></a>
                             </div>
                             <div class="local_counter_area">
