--- a/frontend/templates/frontend/privacy-policy.html
+++ b/frontend/templates/frontend/privacy-policy.html
@@ -36,7 +36,7 @@
                             <p>
                                 ARABIAN NIGHTS TOURS LLC maintains the ARABIANKNIGHTSTRAVEL.COM Website (“Site”). The following are the terms of use that govern use of the Site (“Terms of Use”). By using the Site you expressly agree to be bound by these Terms of Use and the
 
-ARABIANNIGHTSTRAVEL.COM privacy policy and to follow these Terms of Use and all applicable laws and regulations governing use of the Site.
+ARABIANKNIGHTSTOURS.COM privacy policy and to follow these Terms of Use and all applicable laws and regulations governing use of the Site.
 
 ARABIAN NIGHTS TOURS LLC reserves the right to change these Terms of Use at any time, effective immediately upon posting on the Site. Please check this page of the Site periodically. We will note when there are updates to the Terms of Use at the bottom of the Terms of Use. If you violate these Terms of Use, ARABIAN KNIGHTS TOURS LLC may terminate your use of the Site, bar you from future use of the Site, and/or take appropriate legal action against you.
                             </p>
