--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -47,8 +47,8 @@
                                     <span class="lang-name"></span>
                                 </button>
                                 <div class="dropdown-menu language-dropdown-menu">
-                                    <a class="dropdown-item" href="#">USD</a>
-                                    <a class="dropdown-item" href="#">EUR</a>
+                                    <a class="dropdown-item" href="#">AED</a>
+                                    
                                     
                                 </div>
                             </div>
