--- a/tour/templates/tour/checkout.html
+++ b/tour/templates/tour/checkout.html
@@ -91,7 +91,7 @@
                                    
                                     <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                         <label>Booking note</label>
-                                        <textarea  name="booking_note" placeholder="Notes about your order, e.g. special notes for delivery" class="form-control"></textarea>
+                                        <textarea  name="booking_note" class="form-control"></textarea>
                                     </div>
                                 </div>
                             
