--- a/tour/templates/tour/booking-confirmation.html
+++ b/tour/templates/tour/booking-confirmation.html
@@ -62,8 +62,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="tour_details_right_sidebar_wrapper">
+                <div  class="col-lg-4" >
+                    <div class="tour_details_right_sidebar_wrapper" >
                         <div class="tour_detail_right_sidebar">
                             <div class="tour_details_right_boxed">
                                 <div class="tour_details_right_box_heading">
@@ -77,20 +77,15 @@
                                         <li>Booking status: <span>{{ booking.status }}</span></li>
                                     </ul>
                                     <ul>
-                                        <li>Adult Price x 1 <span>$40,000.00</span></li>
-                                        <li class="remove_coupon_tour">Discount <span>10%</span></li>
-                                        <li>Tax <span>5%</span></li>
+                                        <li>Adult Price x  <span></span></li>
+                                        <li>Child Price x <span></span></li>
+                                        <li>Infant Price x <span></span></li>
+                                        {% comment %} <li class="remove_coupon_tour">Discount <span>10%</span></li>
+                                        <li>Tax <span>5%</span></li> {% endcomment %}
                                     </ul>
-                                    <div class="tour_bokking_subtotal_area">
-                                        <h6 class="remove_coupon_tour">Subtotal <span>$38,000.00</span></h6>
-                                    </div>
-                                    <div class="coupon_add_area">
-                                        <h6><span class="remove_coupon_tour">Remove</span> Coupon code (OFF 5000)
-                                            <span>$5,000.00</span>
-                                        </h6>
-                                    </div>
+                                    
                                     <div class="total_subtotal_booking">
-                                        <h6 class="remove_coupon_tour">Total Amount <span>$33,000.00</span> </h6>
+                                        <h6 class="remove_coupon_tour">Total Amount <span></span> </h6>
                                     </div>
                                 </div>
                             </div>
@@ -106,6 +101,14 @@
     {% include 'frontend/newsletter.html' %}
    
     {% include 'frontend/footer.html' %}
+
+
+    
+    {% block custom_script %}
+    <script src="https://unpkg.com/vue@next"></script>
+   
+    
+    {% endblock %}
 
     {% endblock main %}
     
