--- a/frontend/templates/frontend/faqs.html
+++ b/frontend/templates/frontend/faqs.html
@@ -38,93 +38,30 @@
                         <div class="faqs_three_area_wrapper">
                             <!-- Item One -->
                             <div class="faqs_item_wrapper">
-                                <h3>General question</h3>
+                                <h3>Desert Safari</h3>
                                 <div class="faqs_main_item">
                                     <div class="accordion" id="accordionExample">
+                                        {% for faq in faqs %}
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="headingOne">
                                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                                    data-bs-target="#collapseOne" aria-expanded="true"
+                                                    data-bs-target="#collapseOne{{ faq.id }}" aria-expanded="true"
                                                     aria-controls="collapseOne">
-                                                    It is a long established fact that a reader will be distracted by
-                                                    the readable content?
+                                                    {{ faq.question }}
                                                 </button>
                                             </h2>
                                             <div id="collapseOne" class="accordion-collapse collapse show"
                                                 aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
                                                     <p>
-                                                        There are many variations of passages of Lorem Ipsum available,
-                                                        but the majority have suffered alteration in some form, by
-                                                        injected humour, or randomised words which don't look even
-                                                        slightly believable.
+                                                        {{ faq.answer}}
                                                     </p>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="headingTwo">
-                                                <button class="accordion-button collapsed" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-                                                    aria-expanded="false" aria-controls="collapseTwo">
-                                                    It is a long established fact that a reader will be distracted by
-                                                    the readable content?
-                                                </button>
-                                            </h2>
-                                            <div id="collapseTwo" class="accordion-collapse collapse"
-                                                aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                                                <div class="accordion-body">
-                                                    <p>
-                                                        There are many variations of passages of Lorem Ipsum available,
-                                                        but the majority have suffered alteration in some form, by
-                                                        injected humour, or randomised words which don't look even
-                                                        slightly believable.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="headingThree">
-                                                <button class="accordion-button collapsed" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                                                    aria-expanded="false" aria-controls="collapseThree">
-                                                    It is a long established fact that a reader will be distracted by
-                                                    the readable content?
-                                                </button>
-                                            </h2>
-                                            <div id="collapseThree" class="accordion-collapse collapse"
-                                                aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                                                <div class="accordion-body">
-                                                    <p>
-                                                        There are many variations of passages of Lorem Ipsum available,
-                                                        but the majority have suffered alteration in some form, by
-                                                        injected humour, or randomised words which don't look even
-                                                        slightly believable.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="headingFour">
-                                                <button class="accordion-button collapsed" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#collapseFour"
-                                                    aria-expanded="false" aria-controls="collapseFour">
-                                                    It is a long established fact that a reader will be distracted by
-                                                    the readable content?
-                                                </button>
-                                            </h2>
-                                            <div id="collapseFour" class="accordion-collapse collapse"
-                                                aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                                                <div class="accordion-body">
-                                                    <p>
-                                                        There are many variations of passages of Lorem Ipsum available,
-                                                        but the majority have suffered alteration in some form, by
-                                                        injected humour, or randomised words which don't look even
-                                                        slightly believable.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        {% endfor %}
+                                        
+                                       
                                     </div>
                                 </div>
                             </div>
