--- a/frontend/templates/frontend/faqs.html
+++ b/frontend/templates/frontend/faqs.html
@@ -46,11 +46,11 @@
                                             <h2 class="accordion-header" id="headingOne">
                                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                                     data-bs-target="#collapseOne{{ faq.id }}" aria-expanded="true"
-                                                    aria-controls="collapseOne">
+                                                    aria-controls="collapseOne{{ faq.id }}">
                                                     {{ faq.question }}
                                                 </button>
                                             </h2>
-                                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                            <div id="collapseOne{{faq.id}}" class="accordion-collapse collapse show"
                                                 aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
                                                     <p>
