--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -391,208 +391,6 @@
         </div>
     </section>
 
-    <!-- Choose your destinations Area-->
-    <section id="choose_destinations_area" class="section_padding_top">
-        <div class="container">
-            <!-- Section Heading -->
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="section_heading_center">
-                        <h2>Choose your destinations</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="choose_desti_wrapper">
-                        <div class="choose_des_inner_wrap">
-                            <div class="choose_boxed_inner">
-                                <img src="/static/assets/img/destination/home-two-des-1.png" alt="img">
-                                <div class="choose_img_text">
-                                    <h2>London | $13,500</h2>
-                                    <h3>7 days 6 nights</h3>
-                                </div>
-                            </div>
-                            <div class="flep_choose_box">
-                                <div class="flep_choose_box_inner">
-                                    <div class="rating_outof">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <h5>5 Out of 5</h5>
-                                    </div>
-                                    <h2>China | $6000</h2>
-                                    <h3>8 days 7 nights</h3>
-                                    <p>Cupidatat consectetur ea cillum laborum labore veniam proident consectetur
-                                        excepteur amet pariatur et laboris sint laborum.</p>
-                                    <a href="top-destinations-details.html">Tour details</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="choose_desti_wrapper">
-                        <div class="choose_des_inner_wrap">
-                            <div class="choose_boxed_inner">
-                                <img src="/static/assets/img/destination/home-two-des-2.png" alt="img">
-                                <div class="choose_img_text">
-                                    <h2>Gangtok | $3,500</h2>
-                                    <h3>7 days 6 nights</h3>
-                                </div>
-                            </div>
-                            <div class="flep_choose_box">
-                                <div class="flep_choose_box_inner">
-                                    <div class="rating_outof">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <h5>5 Out of 5</h5>
-                                    </div>
-                                    <h2>Gangtok | $3,500</h2>
-                                    <h3>7 days 6 nights</h3>
-                                    <p>Cupidatat consectetur ea cillum laborum labore veniam proident consectetur
-                                        excepteur amet pariatur et laboris sint laborum.</p>
-                                    <a href="top-destinations-details.html">Tour details</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="choose_desti_wrapper">
-                        <div class="choose_des_inner_wrap">
-                            <div class="choose_boxed_inner">
-                                <img src="/static/assets/img/destination/home-two-des-3.png" alt="img">
-                                <div class="choose_img_text">
-                                    <h2>Phuket | $2,500</h2>
-                                    <h3>7 days 6 nights</h3>
-                                </div>
-                            </div>
-                            <div class="flep_choose_box">
-                                <div class="flep_choose_box_inner">
-                                    <div class="rating_outof">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <h5>5 Out of 5</h5>
-                                    </div>
-                                    <h2>Phuket | $2,500</h2>
-                                    <h3>7 days 7 nights</h3>
-                                    <p>Cupidatat consectetur ea cillum laborum labore veniam proident consectetur
-                                        excepteur amet pariatur et laboris sint laborum.</p>
-                                    <a href="top-destinations-details.html">Tour details</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="choose_desti_wrapper">
-                        <div class="choose_des_inner_wrap">
-                            <div class="choose_boxed_inner">
-                                <img src="/static/assets/img/destination/home-two-des-4.png" alt="img">
-                                <div class="choose_img_text">
-                                    <h2>Sydney | $6,000</h2>
-                                    <h3>4 days 3 nights</h3>
-                                </div>
-                            </div>
-                            <div class="flep_choose_box">
-                                <div class="flep_choose_box_inner">
-                                    <div class="rating_outof">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <h5>5 Out of 5</h5>
-                                    </div>
-                                    <h2>Sydney | $6,000</h2>
-                                    <h3>4 days 3 nights</h3>
-                                    <p>Cupidatat consectetur ea cillum laborum labore veniam proident consectetur
-                                        excepteur amet pariatur et laboris sint laborum.</p>
-                                    <a href="top-destinations-details.html">Tour details</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="choose_desti_wrapper">
-                        <div class="choose_des_inner_wrap">
-                            <div class="choose_boxed_inner">
-                                <img src="/static/assets/img/destination/home-two-des-5.png" alt="img">
-                                <div class="choose_img_text">
-                                    <h2>Gangtok | $3,500</h2>
-                                    <h3>9 days 8 nights</h3>
-                                </div>
-                            </div>
-                            <div class="flep_choose_box">
-                                <div class="flep_choose_box_inner">
-                                    <div class="rating_outof">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <h5>5 Out of 5</h5>
-                                    </div>
-                                    <h2>Gangtok | $3,500</h2>
-                                    <h3>9 days 8 nights</h3>
-                                    <p>Cupidatat consectetur ea cillum laborum labore veniam proident consectetur
-                                        excepteur amet pariatur et laboris sint laborum.</p>
-                                    <a href="top-destinations-details.html">Tour details</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <div class="choose_desti_wrapper">
-                        <div class="choose_des_inner_wrap">
-                            <div class="choose_boxed_inner">
-                                <img src="/static/assets/img/destination/home-two-des-6.png" alt="img">
-                                <div class="choose_img_text">
-                                    <h2>Pattaya | $4,200</h2>
-                                    <h3>5 days 6 nights</h3>
-                                </div>
-                            </div>
-                            <div class="flep_choose_box">
-                                <div class="flep_choose_box_inner">
-                                    <div class="rating_outof">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <h5>5 Out of 5</h5>
-                                    </div>
-                                    <h2>Pattaya | $4,200</h2>
-                                    <h3>5 days 6 nights</h3>
-                                    <p>Cupidatat consectetur ea cillum laborum labore veniam proident consectetur
-                                        excepteur amet pariatur et laboris sint laborum.</p>
-                                    <a href="top-destinations-details.html">Tour details</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Partner Area -->
     <section id="hometwo_clinet_area" class="section_padding">
@@ -624,42 +422,41 @@
                             <div class="home_two_client_slider  owl-theme owl-carousel">
                                 <div class="client_two_content">
                                     <p>
-                                        Ad non quis quis commodo ut nostrud ipsum ad reprehenderit. Lorem eiusmod
-                                        excepteur anim adipisicing officia officia.
+                                        A wonderful day with Ramzan who is a very caring man, he took care of my mom and the rest of the group as a big brother
+Very big heart !!!!! Thank you so much dear Ramzan
+Lots of fun , excellent organisation, drive is safe
+All there to spend a memorable day
                                     </p>
                                     <div class="client_two_author">
-                                        <h5>Cameron douglas</h5>
-                                        <h6>Businessman</h6>
+                                        <h5>Sara Et Atika</h5>
+                                        <h6>Tripadvisor</h6>
                                     </div>
                                 </div>
                                 <div class="client_two_content">
                                     <p>
-                                        Ad non quis quis commodo ut nostrud ipsum ad reprehenderit. Lorem eiusmod
-                                        excepteur anim adipisicing officia officia.
+                                        The last day in our holiday in dubai we booked the desert safari Programm,we got an unforgettable trip with the leader Hamdan,who were our driver.Alot of information about the area and safety guiding in the desert,amasing sunset in the beautiful sand.Inside the camp we enjoid a special dinner and a show with bellydance,fireshow and dancing.We recommend this tour to everyone visit dubai.Thank you Hamdan
                                     </p>
                                     <div class="client_two_author">
-                                        <h5>Cameron douglas</h5>
-                                        <h6>Businessman</h6>
+                                        <h5>Tripadvisor</h5>
+                                        <h6></h6>
                                     </div>
                                 </div>
                                 <div class="client_two_content">
                                     <p>
-                                        Ad non quis quis commodo ut nostrud ipsum ad reprehenderit. Lorem eiusmod
-                                        excepteur anim adipisicing officia officia.
+                                        Our tour guide Ramzan made the trip memorable. Gave detailed information, did not rush us at any sites plus an excellent photographer
                                     </p>
                                     <div class="client_two_author">
-                                        <h5>Cameron douglas</h5>
-                                        <h6>Businessman</h6>
+                                        <h5>Miteshv</h5>
+                                        <h6>Tripadvisor</h6>
                                     </div>
                                 </div>
                                 <div class="client_two_content">
                                     <p>
-                                        Ad non quis quis commodo ut nostrud ipsum ad reprehenderit. Lorem eiusmod
-                                        excepteur anim adipisicing officia officia.
+                                        Ramzan was a great host who picked us up on time and was very friendly. He ensured we had a fantastic time during the whole experience and accomodated every request we had. How can I not include his amazing photography skills and kind nature.He made sure we have an amazing experience.A fantastic time in the desert indeed! Would highly recommend and hope to come again sooner
                                     </p>
                                     <div class="client_two_author">
-                                        <h5>Cameron douglas</h5>
-                                        <h6>Businessman</h6>
+                                        <h5>FearLess</h5>
+                                        <h6>Tripadvisor</h6>
                                     </div>
                                 </div>
                             </div>
