--- a/frontend/templates/frontend/faqs.html
+++ b/frontend/templates/frontend/faqs.html
@@ -45,7 +45,7 @@
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="headingOne">
                                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                                    data-bs-target="#collapseOne{{ faq.id }}" aria-expanded="false"
+                                                    data-bs-target="#collapseOne{{ faq.id }}" aria-expanded="true"
                                                     aria-controls="collapseOne{{ faq.id }}">
                                                     {{ faq.question }}
                                                 </button>
