--- a/frontend/templates/frontend/contact.html
+++ b/frontend/templates/frontend/contact.html
@@ -78,18 +78,21 @@
                     </div>
                 </div>
             </div>
-            <div class="contact_main_form_area">
+           
+            <div class="contact_main_form_area" >
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                         <div class="section_heading_center">
                             <h2>Leave us a message</h2>
                         </div>
-                        <div class="contact_form">
+                        <div class="contact_form" >
                             <form method="POST" id="contact_form_content">
                                 {% csrf_token %}
                                 <div class="row">
+                                   
                                     <div class="col-lg-12">
                                         {{form.name}}
+                                       
                                     </div>
                                     <div class="col-lg-6">
                                         {{form.email}}
@@ -105,7 +108,7 @@
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <button type="submit" class="btn btn_theme btn_md">Send message</button>
+                                            <button id="contact-us" type="submit" class="btn btn_theme btn_md"> send message </button>
                                         </div>
                                     </div>
                                     
@@ -117,7 +120,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            
+        </div>
         </div>
     </section>
 
@@ -125,6 +129,17 @@
     {% include 'frontend/newsletter.html' %}
    
     {% include 'frontend/footer.html' %}
+
+
+    {% block custom_script %}
+    
+
+		  
+		
+	
+   
+    
+    {% endblock %}
 
     {% endblock main %}
     
