--- a/frontend/templates/frontend/contact.html
+++ b/frontend/templates/frontend/contact.html
@@ -106,6 +106,12 @@
                                             {{ form.message }}
                                         </div>
                                     </div>
+                                    <div class="col-lg-6">
+                                        <div class="form-group">
+                                            {{ form.captcha }}
+                                        </div>
+                                    </div>
+                                    
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <button id="contact-us" type="submit" class="btn btn_theme btn_md"> send message </button>
